@@ -21,14 +21,22 @@ public class LocationService implements ILocationService {
     private final LocationRepository locationRepo;
 
     @Override
-    public List<LocationDTO> getAllLocation(boolean status) {
-        return locationRepo.findAllByStatus(status).stream().map(LocationMapper.INSTANCE::toDTO).collect(Collectors.toList());
-
+    public List<LocationDTO> listAllTrue() {
+        return locationRepo.findByStatus(true).stream().map(LocationMapper.INSTANCE::toDTO).toList();
     }
 
     @Override
-    public LocationDTO getLocationById(boolean status, long id) {
-        Location location = locationRepo.findByStatusAndId(status, id).orElseThrow(() -> new NotFoundException("Location not found with id: "+ id));
+    public List<LocationDTO> getAllLocation(boolean status) {
+        return locationRepo.findAllByStatus(status).stream().map(LocationMapper.INSTANCE::toDTO).collect(Collectors.toList());
+    }
+    @Override
+    public List<Location> findLocationByTrainingClassID(Long id) {
+        return locationRepo.findDistinctAllByListTowersListTrainingClassUnitInformationsTrainingClassId(id);
+    }
+
+    @Override
+    public LocationDTO getLocationById(boolean status, Long id) {
+        Location location = locationRepo.findByStatusAndId(status, id).orElseThrow(() -> new NotFoundException("Location not found with id: " + id));
         return LocationMapper.INSTANCE.toDTO(location);
     }
 }
